Added text content to website

--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -7,8 +7,12 @@
 
     <title>Team Documents - Glacies Indicium</title>
     <link rel="icon" href="images/favicon.png" type="image/png" />
+
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
+
+    <!--Link to icon library-->
+    <link rel="stylesheet" href="styles/all.min.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -49,6 +53,15 @@
               <a class="dropdown-item" href="demos.html">Demos</a>
             </div>
           </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="https://github.com/mlgarrett/antarcticapstone"
+              target="_blank"
+            >
+              GitHub Repository
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -62,12 +75,14 @@
           class="list-group-item list-group-item-action"
         >
           Team Standards
+          <i class="fas fa-download ml-2"></i>
         </a>
         <a
           href="documents/TeamInventory.pdf"
           class="list-group-item list-group-item-action"
         >
           Team Inventory
+          <i class="fas fa-download ml-2"></i>
         </a>
 
         <a
@@ -75,6 +90,7 @@
           class="list-group-item list-group-item-action"
         >
           Mini Intro Presentation
+          <i class="fas fa-download ml-2"></i>
         </a>
 
         <a href="#" class="list-group-item list-group-item-action disabled">
@@ -125,6 +141,15 @@
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="demos.html">Demos</a>
+            </li>
+            <li class="nav-item active">
+              <a
+                class="nav-link"
+                href="https://github.com/mlgarrett/antarcticapstone"
+                target="_blank"
+              >
+                GitHub Repository
+              </a>
             </li>
           </ul>
         </div>
