--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -49,13 +49,68 @@
               <a class="dropdown-item" href="demos.html">Demos</a>
             </div>
           </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="https://github.com/mlgarrett/antarcticapstone"
+              target="_blank"
+            >
+              GitHub Repository
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
-    <div class="jumbotron-fluid text-center">
-      <h1>Schedule</h1>
-    </div>
-    <div class="container-fluid text-center margin-bottom-md">
+
+    <div class="container-fluid margin-bottom-md">
+      <div class="jumbotron-fluid text-center m-4">
+        <h1>Schedule</h1>
+      </div>
+
+      <div class="row text-left">
+        <div class="col-md-6 col-sm-12 ml-md-auto mr-md-auto">
+          <ol type="I">
+            <li class="p-2">
+              Up to October 9<sup>th</sup>
+              <ol>
+                Up to this point the team has been working to outline and define
+                the scope of the project as well as the project requirements. By
+                10/9 the team will have an almost complete Tech Feasibility
+                document which will completely outline the technologies we will
+                use for this project.
+              </ol>
+            </li>
+            <li class="p-2">
+              Up to October 23<sup>rd</sup>
+              <ol>
+                Up to this point each member of the team should feel
+                sufficiently experienced in the technologies we will be using
+                for this project. Work will have begun on a working prototype.
+              </ol>
+            </li>
+            <li class="p-2">
+              Up to November 9<sup>th</sup>
+              <ol>
+                Up to this point the team has been working to outline and define
+                the scope of the project as well as the project requirements. By
+                10/9 the team will have an almost complete Tech Feasibility
+                document which will completely outline the technologies we will
+                use for this project.
+              </ol>
+            </li>
+            <li class="p-2">
+              End of Term
+              <ol>
+                The team will have presented their prototype to the team mentor
+                and client (as requested). At this point we want to reevaluate
+                with the client any potential stretch goals to be completed in
+                the following semester.
+              </ol>
+            </li>
+          </ol>
+        </div>
+      </div>
+
       <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Glacies Indicium</a>
         <button
@@ -69,7 +124,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse" id="navbarFooterCollapse">
+        <div
+          class="navbar-collapse collapse text-center"
+          id="navbarFooterCollapse"
+        >
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home</a>
@@ -88,6 +146,15 @@
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="demos.html">Demos</a>
+            </li>
+            <li class="nav-item active">
+              <a
+                class="nav-link"
+                href="https://github.com/mlgarrett/antarcticapstone"
+                target="_blank"
+              >
+                GitHub Repository
+              </a>
             </li>
           </ul>
         </div>
