--- a/TeamWebsite/demos.html
+++ b/TeamWebsite/demos.html
@@ -49,11 +49,21 @@
               <a class="dropdown-item" href="demos.html">Demos</a>
             </div>
           </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="https://github.com/mlgarrett/antarcticapstone"
+              target="_blank"
+            >
+              GitHub Repository
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
     <div class="jumbotron-fluid text-center">
       <h1>Project Demos</h1>
+      <p>Coming Soon!</p>
     </div>
     <div class="container-fluid text-left margin-bottom-md">
       <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
@@ -91,6 +101,15 @@
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="demos.html">Demos</a>
+            </li>
+            <li class="nav-item active">
+              <a
+                class="nav-link"
+                href="https://github.com/mlgarrett/antarcticapstone"
+                target="_blank"
+              >
+                GitHub Repository
+              </a>
             </li>
           </ul>
         </div>
