--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -50,6 +50,15 @@
               <a class="dropdown-item" href="demos.html">Demos</a>
             </div>
           </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="https://github.com/mlgarrett/antarcticapstone"
+              target="_blank"
+            >
+              GitHub Repository
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -244,6 +253,15 @@
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="demos.html">Demos</a>
+            </li>
+            <li class="nav-item active">
+              <a
+                class="nav-link"
+                href="https://github.com/mlgarrett/antarcticapstone"
+                target="_blank"
+              >
+                GitHub Repository
+              </a>
             </li>
           </ul>
         </div>
