--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -11,49 +11,45 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html"
-        ><img src="images/logo.png" height="50" width="50"
-      /></a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" height="50" width="50"/> GLACIES INDICIUM</a>
       <button
         class="navbar-toggler ml-auto"
         data-toggle="collapse"
-        data-target="#navbarNavDropdown"
-      >
+        data-target="#navbarNavDropdown">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"> HOME
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="team.html">Meet the Team</a>
+            <a class="nav-link" href="team.html">OUR TEAM</a>
           </li>
 
-          <li class="nav-item dropdown active">
+          <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false"
-              >About the Project</a
-            >
-            <div class="dropdown-menu" aria-labelledby="dropdown09">
-              <a class="dropdown-item" href="documents.html">Documents</a>
-              <a class="dropdown-item" href="schedule.html">Schedule</a>
-              <a class="dropdown-item" href="requirements.html">Requirements</a>
-              <a class="dropdown-item" href="demos.html">Demos</a>
+              aria-expanded="false">MORE INFO</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
+              <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
+              <a class="dropdown-item" href="documents.html">DOCUMENTS<span class="sr-only">(current)</span></a>
+              <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
+              <a class="dropdown-item" href="demos.html">DEMOS</a>
+              <a class="dropdown-item" href="https://github.com/mlgarrett/antarcticapstone">GITHUB</a>
             </div>
           </li>
         </ul>
       </div>
     </nav>
     <div class="jumbotron-fluid text-center">
-      <h1>Documents</h1>
+      <h2>Documents</h2>
     </div>
     <div class="container-fluid text-left margin-bottom-md">
       <div class="list-group list-group-flush">
@@ -90,46 +86,6 @@
         </a>
       </div>
 
-      <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Glacies Indicium</a>
-        <button
-          class="navbar-toggler collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarFooterCollapse"
-          aria-controls="navbarFooterCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="navbar-collapse collapse text-center"
-          id="navbarFooterCollapse"
-        >
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="team.html">Meet the Team</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="documents.html">Documents</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="schedule.html">Schedule</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="requirements.html">Requirements</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="demos.html">Demos</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
