--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -11,27 +11,24 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html"
-        ><img src="images/logo.png" height="50" width="50"
-      /></a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" height="50" width="50"/> GLACIES INDICIUM</a>
       <button
         class="navbar-toggler ml-auto"
         data-toggle="collapse"
-        data-target="#navbarNavDropdown"
-      >
+        data-target="#navbarNavDropdown">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
+            <a class="nav-link" href="index.html"> HOME
+              <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="team.html">Meet the Team</a>
+            <a class="nav-link" href="team.html">OUR TEAM</a>
           </li>
 
           <li class="nav-item dropdown">
@@ -39,70 +36,92 @@
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false"
-              >About the Project</a
-            >
-            <div class="dropdown-menu" aria-labelledby="dropdown09">
-              <a class="dropdown-item" href="documents.html">Documents</a>
-              <a class="dropdown-item" href="schedule.html">Schedule</a>
-              <a class="dropdown-item" href="requirements.html">Requirements</a>
-              <a class="dropdown-item" href="demos.html">Demos</a>
+              aria-expanded="false">MORE INFO</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
+              <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
+              <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
+              <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
+              <a class="dropdown-item" href="demos.html">DEMOS</a>
+              <a class="dropdown-item" href="https://github.com/mlgarrett/antarcticapstone">GITHUB</a>
             </div>
           </li>
         </ul>
       </div>
     </nav>
-    <div class="jumbotron-fluid text-center">
-      <h1 class="display-4">Glacies Indicium</h1>
-      <img src="images/logo.png" class="logo" alt="team logo" />
-
-      <hr class="my-4" />
-    </div>
-    <div class="container-fluid text-center">
-      <div class="row justify-content-center">
-        <h4>About the Project</h4>
+    <div class="jumbotron jumbotron-fluid justify-content-center">
+      <h1 class="display-4 h1-responsive">visualizing antarctica</h1>
+      <div class="container-fluid justify-content-center" id="jumbo-p">
+        <p class="lead">
+          Because the Antarctic continent is the most isolated continent
+          on Earth, scientists look to its unmodified landscape to study
+          a range of natural phenomena. In order to preserve the Antarctic's
+          pristine environment, scientists have begun using satellite images
+          to remotely study its landscape, but using these images has become
+          a challenge in itself.
+        </p>
       </div>
-
-      <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Glacies Indicium</a>
-        <button
-          class="navbar-toggler collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarFooterCollapse"
-          aria-controls="navbarFooterCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="navbar-collapse collapse text-center"
-          id="navbarFooterCollapse"
-        >
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="team.html">Meet the Team</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="documents.html">Documents</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="schedule.html">Schedule</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="requirements.html">Requirements</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="demos.html">Demos</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+        <a href="#home-about">
+            <img src="images/scroll-arrow.png" class="scrollbtn" height="50" width="50" alt="scroll arrow"/>
+        </a>
     </div>
+    <div class="container-fluid justify-content-center">
+      <div class="row justify-content-center" id="home-about">
+        <h3>About the Project</h3>
+      </div>
+      <div class="row justify-content-center">
+        <p>
+          Scientists use satellite images like the ones shown below to perform
+          their investigations. Each image is stored as a GeoTIFF file that contains geological reference
+          information like geographical coordinates of where the image is from.
+          Each image may also have multiple spectral bands of the image, so that
+          the image can be viewed from multiple different segments of the
+          electromagnetic spectrum. This allows geologists to see different geological
+          components that aren't visible on the normal satellite image.
+        </p>
+      </div>
+      <div class="row justify-content-center">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="images/geotiff.png" alt="first geotiff image"/>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/geotiff1.png" alt="second geotiff image"/>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/geotiff2.png" alt="third geotiff image"/>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/geotiff3.png" alt="fourth geotiff image"/>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <p>
+            We are working with ICEBERG (Imagery Cyberinfrastructure and
+            Extensible Building-Blocks to Enhance Research in the
+            Geosciences) scientists to help categorize the surface of
+            Antarctica. They are faced with the challenge of trying to analyze
+            a large quantity of high-resolution satellite images.
+            Our team aims to improve their ability to navigate these images by
+            designing a web-based map application.
+            Our solution will make it possible for our client to
+            view satellite images in a map-like interface, query data within the
+            map to find locations with specific geological characteristics, and
+            export "snapshots" of the map for viewing in areas of Antarctica
+            that lack Internet access.
+          </p>
+        </div>
+      </div>
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
