--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -14,25 +14,24 @@
     <link rel="stylesheet" href="styles/all.min.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html"
-        ><img src="images/logo.png" height="50" width="50"
-      /></a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" height="50" width="50"/> GLACIES INDICIUM</a>
       <button
         class="navbar-toggler ml-auto"
         data-toggle="collapse"
-        data-target="#navbarNavDropdown"
-      >
+        data-target="#navbarNavDropdown">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="team.html">Meet the Team</a>
+            <a class="nav-link" href="index.html"> HOME
+              </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="team.html">OUR TEAM<span class="sr-only">(current)</span></a>
           </li>
 
           <li class="nav-item dropdown">
@@ -40,21 +39,20 @@
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false"
-              >About the Project</a
-            >
-            <div class="dropdown-menu" aria-labelledby="dropdown09">
-              <a class="dropdown-item" href="documents.html">Documents</a>
-              <a class="dropdown-item" href="schedule.html">Schedule</a>
-              <a class="dropdown-item" href="requirements.html">Requirements</a>
-              <a class="dropdown-item" href="demos.html">Demos</a>
+              aria-expanded="false">MORE INFO</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
+              <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
+              <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
+              <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
+              <a class="dropdown-item" href="demos.html">DEMOS</a>
+              <a class="dropdown-item" href="https://github.com/mlgarrett/antarcticapstone">GITHUB</a>
             </div>
           </li>
         </ul>
       </div>
     </nav>
-    <div class="jumbotron-fluid text-center">
-      <h1>Meet The Team</h1>
+    <div class="jumbotron jumbotron-fluid text-center">
+      <h2>Our Team</h2>
     </div>
     <div class="container-fluid text-center">
       <div class="row padding-top-md justify-content-center">
@@ -64,19 +62,21 @@
             class="profile-image"
             alt="Joe Profile Image"
           />
-          <p class="image-caption font-weight-bold">Joe Carter</p>
-          <p class="image-caption">Team Lead</p>
-          <p class="image-caption">
-            <a href="https://www.linkedin.com/in/" target="_blank">
-              <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="https://github.com/" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="mailto:">
-              <i class="fas fa-envelope"></i>
-            </a>
-          </p>
+          <div class="justify-contents-center">
+            <p class="image-caption">
+              <strong>Joe Carter</strong><br>
+              Team Lead<br>
+              <a href="https://www.linkedin.com/in/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="mailto:">
+                <i class="fas fa-envelope"></i>
+              </a>
+            </p>
+          </div>
         </div>
 
         <div class="col-md-2 col-sm-4">
@@ -85,21 +85,21 @@
             class="profile-image"
             alt="Kass Coxen profile image"
           />
-          <p class="image-caption font-weight-bold">
-            Kass Coxen
-          </p>
-          <p class="image-caption">Recorder</p>
-          <p class="image-caption">
-            <a href="https://www.linkedin.com/in/" target="_blank">
-              <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="https://github.com/" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="mailto:">
-              <i class="fas fa-envelope"></i>
-            </a>
-          </p>
+          <div class="justify-contents-center">
+            <p class="image-caption">
+              <strong>Kassandra Coxen</strong><br>
+              Recorder<br>
+              <a href="https://www.linkedin.com/in/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="mailto:">
+                <i class="fas fa-envelope"></i>
+              </a>
+            </p>
+          </div>
         </div>
 
         <div class="col-md-2 col-sm-4">
@@ -108,19 +108,21 @@
             class="profile-image"
             alt="Beck Bohnker profile image"
           />
-          <p class="image-caption font-weight-bold">Beck Bohnker</p>
-          <p class="image-caption">Customer Communicator</p>
-          <p class="image-caption">
-            <a href="https://www.linkedin.com/in/" target="_blank">
-              <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="https://github.com/" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="mailto:">
-              <i class="fas fa-envelope"></i>
-            </a>
-          </p>
+          <div class="justify-contents-center">
+            <p class="image-caption">
+              <strong>Beck Bohnker</strong><br>
+              Customer Communicator<br>
+              <a href="https://www.linkedin.com/in/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="mailto:">
+                <i class="fas fa-envelope"></i>
+              </a>
+            </p>
+          </div>
         </div>
 
         <div class="col-md-2 col-sm-4">
@@ -129,19 +131,21 @@
             class="profile-image"
             alt="Logan Garrett profile image"
           />
-          <p class="image-caption font-weight-bold">Logan Garrett</p>
-          <p class="image-caption">Quality Assurance</p>
-          <p class="image-caption">
-            <a href="https://www.linkedin.com/in/" target="_blank">
-              <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="https://github.com/mlgarrett" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="mailto:">
-              <i class="fas fa-envelope"></i>
-            </a>
-          </p>
+          <div class="justify-contents-center">
+            <p class="image-caption">
+              <strong>Logan Garrett</strong><br>
+              Quality Assurance<br>
+              <a href="https://www.linkedin.com/in/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/mlgarrett" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="mailto:">
+                <i class="fas fa-envelope"></i>
+              </a>
+            </p>
+          </div>
         </div>
 
         <div class="col-md-2 col-sm-4">
@@ -150,21 +154,23 @@
             class="profile-image"
             alt="Zach Spielberger profile image"
           />
-          <p class="image-caption font-weight-bold">Zach Spielberger</p>
-          <p class="image-caption">Architect</p>
-          <p class="image-caption">
-            <a
-              href="https://www.linkedin.com/in/zachary-spielberger/"
-              target="_blank"
-              ><i class="fab fa-linkedin"></i
-            ></a>
-            <a href="https://github.com/zachspiel" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="mailto:zacharyspielberger@nau.edu"
-              ><i class="fas fa-envelope"></i
-            ></a>
-          </p>
+          <div class="justify-content-center">
+            <p class="image-caption">
+              <strong>Zach Spielberger</strong><br>
+              Architect<br>
+              <a
+                href="https://www.linkedin.com/in/zachary-spielberger/"
+                target="_blank"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a href="https://github.com/zachspiel" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="mailto:zacharyspielberger@nau.edu"
+                ><i class="fas fa-envelope"></i
+              ></a>
+            </p>
+          </div>
         </div>
       </div>
 
@@ -178,8 +184,10 @@
             class="profile-image"
             alt="Andrew Abraham Profile Image"
           />
-          <p class="image-caption font-weight-bold">Andrew Abraham</p>
-          <p class="image-caption">Team Mentor</p>
+          <p class="image-caption">
+            <strong>Andrew Abraham</strong><br>
+            Team Mentor
+          </p>
         </div>
 
         <div class="col-4 col-sm-4">
@@ -188,10 +196,10 @@
             class="profile-image"
             alt="Dr. Mark Salvatore profile image"
           />
-          <p class="image-caption font-weight-bold">Dr. Mark Salvatore</p>
           <p class="image-caption">
-            Assistant Professor Department of Planetary Science <br />
-            Northern Arizona University
+            <strong>Dr. Mark Salvatore</strong><br>
+            Northern Arizona University<br>
+            Assistant Professor Department of Planetary Science
           </p>
         </div>
 
@@ -201,53 +209,13 @@
             class="profile-image"
             alt="Dr. Heather Lynch profile image"
           />
-          <p class="image-caption font-weight-bold">Dr. Heather Lynch</p>
           <p class="image-caption">
-            Professor Department of Ecology and Evolution <br />
-            Stony Brook University
+            <strong>Dr. Heather Lynch</strong><br>
+            Stony Brook University<br>
+            Professor Department of Ecology and Evolution
           </p>
         </div>
       </div>
-
-      <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Glacies Indicium</a>
-        <button
-          class="navbar-toggler collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarFooterCollapse"
-          aria-controls="navbarFooterCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="navbar-collapse collapse text-center"
-          id="navbarFooterCollapse"
-        >
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="team.html">Meet the Team</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="documents.html">Documents</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="schedule.html">Schedule</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="requirements.html">Requirements</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="demos.html">Demos</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
     </div>
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
