--- a/TeamWebsite/demos.html
+++ b/TeamWebsite/demos.html
@@ -42,7 +42,6 @@
               <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
               <a class="dropdown-item" href="demos.html">DEMOS<span class="sr-only">(current)</span></a>
-              <a class="dropdown-item" href="https://github.com/mlgarrett/antarcticapstone">GITHUB</a>
             </div>
           </li>
           <li class="nav-item">
@@ -51,7 +50,7 @@
               href="https://github.com/mlgarrett/antarcticapstone"
               target="_blank"
             >
-              GitHub Repository
+              GITHUB
             </a>
           </li>
         </ul>
@@ -60,55 +59,6 @@
     <div class="jumbotron-fluid text-center">
       <h2>Project Demos</h2>
     </div>
-    <div class="container-fluid text-left margin-bottom-md">
-      <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Glacies Indicium</a>
-        <button
-          class="navbar-toggler collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarFooterCollapse"
-          aria-controls="navbarFooterCollapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="navbar-collapse collapse text-center"
-          id="navbarFooterCollapse"
-        >
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="team.html">Meet the Team</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="documents.html">Documents</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="schedule.html">Schedule</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="requirements.html">Requirements</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="demos.html">Demos</a>
-            </li>
-            <li class="nav-item active">
-              <a
-                class="nav-link"
-                href="https://github.com/mlgarrett/antarcticapstone"
-                target="_blank"
-              >
-                GitHub Repository
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
     </div>
     <p>
       Coming soon!
