Fixed navbar links active states

--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -29,7 +29,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html"> HOME </a>
           </li>
           <li class="nav-item">
@@ -38,7 +38,7 @@
 
           <li class="nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle"
+              class="nav-link dropdown-toggle active"
               data-toggle="dropdown"
               aria-haspopup="true"
               aria-expanded="false"
@@ -98,8 +98,12 @@
           <i class="fas fa-download ml-2"></i>
         </a>
 
-        <a href="#" class="list-group-item list-group-item-action disabled">
-          Technology Feasibility (Coming Soon!)
+        <a
+          href="documents/TechnologyFeasibility.pdf"
+          class="list-group-item list-group-item-action disabled"
+        >
+          Technology Feasibility
+          <i class="fas fa-download ml-2"></i>
         </a>
 
         <a href="#" class="list-group-item list-group-item-action disabled">
