--- a/TeamWebsite/requirements.html
+++ b/TeamWebsite/requirements.html
@@ -23,7 +23,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html"> HOME
               </a>
           </li>
@@ -31,7 +31,7 @@
             <a class="nav-link" href="team.html">OUR TEAM</a>
           </li>
 
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
