--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -13,34 +13,44 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" height="50" width="50"/> GLACIES INDICIUM</a>
+        <img src="images/logo.png" height="50" width="50" /> GLACIES INDICIUM</a
+      >
       <button
         class="navbar-toggler ml-auto"
         data-toggle="collapse"
-        data-target="#navbarNavDropdown">
+        data-target="#navbarNavDropdown"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"> HOME
-              </a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html"> HOME </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="team.html">OUR TEAM</a>
           </li>
 
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false">MORE INFO</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
-              <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
+              aria-expanded="false"
+              >MORE INFO</a
+            >
+            <div
+              class="dropdown-menu dropdown-menu-right"
+              aria-labelledby="dropdown09"
+            >
+              <a class="dropdown-item" href="requirements.html"
+                >PROJECT REQUIREMENTS</a
+              >
               <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
-              <a class="dropdown-item" href="schedule.html">SCHEDULE<span class="sr-only">(current)</span></a>
+              <a class="dropdown-item" href="schedule.html"
+                >SCHEDULE<span class="sr-only">(current)</span></a
+              >
               <a class="dropdown-item" href="demos.html">DEMOS</a>
             </div>
           </li>
@@ -61,48 +71,48 @@
     </div>
 
     <div class="row text-left">
-        <div class="col">
-          <ol type="I">
-            <li class="p-2">
-              Up to October 9<sup>th</sup>
-              <p class="li-p">
-                Up to this point the team has been working to outline and define
-                the scope of the project as well as the project requirements. By
-                10/9 the team will have an almost complete Tech Feasibility
-                document which will completely outline the technologies we will
-                use for this project.
-              </p>
-            </li>
-            <li class="p-2">
-              Up to October 23<sup>rd</sup>
-              <p class="li-p">
-                Up to this point each member of the team should feel
-                sufficiently experienced in the technologies we will be using
-                for this project. Work will have begun on a working prototype.
-              </p>
-            </li>
-            <li class="p-2">
-              Up to November 9<sup>th</sup>
-              <p class="li-p">
-                Up to this point the team has been working to outline and define
-                the scope of the project as well as the project requirements. By
-                10/9 the team will have an almost complete Tech Feasibility
-                document which will completely outline the technologies we will
-                use for this project.
-              </p>
-            </li>
-            <li class="p-2">
-              End of Term
-              <p class="li-p">
-                The team will have presented their prototype to the team mentor
-                and client (as requested). At this point we want to reevaluate
-                with the client any potential stretch goals to be completed in
-                the following semester.
-              </p>
-            </li>
-          </ol>
-        </div>
+      <div class="col">
+        <ol type="I">
+          <li class="p-2">
+            Up to October 9<sup>th</sup>
+            <p class="li-p">
+              Up to this point the team has been working to outline and define
+              the scope of the project as well as the project requirements. By
+              10/9 the team will have an almost complete Tech Feasibility
+              document which will completely outline the technologies we will
+              use for this project.
+            </p>
+          </li>
+          <li class="p-2">
+            Up to October 23<sup>rd</sup>
+            <p class="li-p">
+              Up to this point each member of the team should feel sufficiently
+              experienced in the technologies we will be using for this project.
+              Work will have begun on a working prototype.
+            </p>
+          </li>
+          <li class="p-2">
+            Up to November 9<sup>th</sup>
+            <p class="li-p">
+              Up to this point the team has been working to outline and define
+              the scope of the project as well as the project requirements. By
+              10/9 the team will have an almost complete Tech Feasibility
+              document which will completely outline the technologies we will
+              use for this project.
+            </p>
+          </li>
+          <li class="p-2">
+            End of Term
+            <p class="li-p">
+              The team will have presented their prototype to the team mentor
+              and client (as requested). At this point we want to reevaluate
+              with the client any potential stretch goals to be completed in the
+              following semester.
+            </p>
+          </li>
+        </ol>
       </div>
+    </div>
 
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
