Added requirements specification document and added gnatt chart to the schedule page

--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -100,14 +100,18 @@
 
         <a
           href="documents/TechnologyFeasibility.pdf"
-          class="list-group-item list-group-item-action disabled"
+          class="list-group-item list-group-item-action"
         >
           Technology Feasibility
           <i class="fas fa-download ml-2"></i>
         </a>
 
-        <a href="#" class="list-group-item list-group-item-action disabled">
-          Requirements Document (Coming Soon!)
+        <a
+          href="documents/RequirementsSpecification.pdf"
+          class="list-group-item list-group-item-action"
+        >
+          Requirements Document
+          <i class="fas fa-download ml-2"></i>
         </a>
 
         <a class="list-group-item list-group-item-action">
