--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -73,6 +73,7 @@
     <div class="row text-left">
       <div class="col">
         <ol type="I">
+          <img src="images/schedule.png" />
           <li class="p-2">
             Up to October 9<sup>th</sup>
             <p class="li-p">
