--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -54,7 +54,7 @@
               href="https://github.com/mlgarrett/antarcticapstone"
               target="_blank"
             >
-              GitHub Repository
+              GITHUB
             </a>
           </li>
         </ul>
