Updated team website with Design Review 2 and Software Design Document

--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -126,6 +126,27 @@
             allowfullscreen
           ></iframe>
         </a>
+
+        <a
+          href="documents/SoftwareDesignDocument.pdf"
+          class="list-group-item list-group-item-action"
+        >
+          Software Design Document
+          <i class="fas fa-download ml-2"></i>
+        </a>
+
+        <a class="list-group-item list-group-item-action">
+          Design Review Presentation 2
+          <br />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/uaTLV7b6J34"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </a>
       </div>
     </div>
     <script src="js/script.js"></script>
