--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -80,14 +80,12 @@
           class="list-group-item list-group-item-action"
         >
           Team Standards
-          <i class="fas fa-download ml-2"></i>
         </a>
         <a
           href="documents/TeamInventory.pdf"
           class="list-group-item list-group-item-action"
         >
           Team Inventory
-          <i class="fas fa-download ml-2"></i>
         </a>
 
         <a
@@ -95,7 +93,6 @@
           class="list-group-item list-group-item-action"
         >
           Mini Intro Presentation
-          <i class="fas fa-download ml-2"></i>
         </a>
 
         <a
@@ -103,7 +100,6 @@
           class="list-group-item list-group-item-action"
         >
           Technology Feasibility
-          <i class="fas fa-download ml-2"></i>
         </a>
 
         <a
@@ -111,46 +107,62 @@
           class="list-group-item list-group-item-action"
         >
           Requirements Document
-          <i class="fas fa-download ml-2"></i>
         </a>
 
-        <a class="list-group-item list-group-item-action">
-          Design Review Presentation
-          <br />
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/XJb6wWcWeXE"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </a>
+        <div class="panel-group list-group-item list-group-item-action">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+                <a class="dropdrown-link" data-toggle="collapse" href="#collapse1" onclick="toggleDropdown(this)">Design Review 1<i class="fa fa-angle-down ml-2"></i></a>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse">
+              <div class="iframe-container">
+                <iframe
+                  class="resp-iframe"
+                  src="https://www.youtube.com/embed/XJb6wWcWeXE"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <a
           href="documents/SoftwareDesignDocument.pdf"
           class="list-group-item list-group-item-action"
         >
           Software Design Document
-          <i class="fas fa-download ml-2"></i>
         </a>
 
-        <a class="list-group-item list-group-item-action">
-          Design Review Presentation 2
-          <br />
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/uaTLV7b6J34"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </a>
+        <div class="panel-group list-group-item list-group-item-action">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+                <a class="dropdrown-link" data-toggle="collapse" href="#collapse2" onclick="toggleDropdown(this)">
+                  Design Review 2 <i class="fa fa-angle-down ml-2"></i></a>
+            </div>
+            <div id="collapse2" class="panel-collapse collapse">
+              <div class="iframe-container">
+                <iframe
+                  class="resp-iframe"
+                  src="https://www.youtube.com/embed/uaTLV7b6J34"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script>
+     function toggleDropdown(element){
+        $(element).find("i").toggleClass('fa-angle-down');
+        $(element).find("i").toggleClass('fa-angle-up');
+      };
+    </script>
   </body>
 </html>
