New ui with Halfmoon-CSS

--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -140,7 +140,7 @@
       <h5>Team Clients & Mentor</h5>
 
       <div class="row padding-top-md justify-content-center">
-        <div class="col-4 col-sm-4">
+        <div class="col-md-4 col-sm-4">
           <img
             src="images/roo.jpg"
             class="profile-image"
@@ -152,7 +152,7 @@
           </p>
         </div>
 
-        <div class="col-4 col-sm-4">
+        <div class="col-md-4 col-sm-4">
           <img
             src="images/mark.jpg"
             class="profile-image"
@@ -165,7 +165,7 @@
           </p>
         </div>
 
-        <div class="col-4 col-sm-4">
+        <div class="col-md-4 col-sm-4">
           <img
             src="images/heather.jpg"
             class="profile-image"
