GitHub link fix

--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -47,12 +47,8 @@
             </div>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="https://github.com/mlgarrett/antarcticapstone"
-              target="_blank"
-            >
-              GITHUB
+            <a id="nav-github-logo" class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium">
+              <img src="images/github-logo-grey.png" height="50" width="50" alt="Github link"/> </a>
             </a>
           </li>
         </ul>
