Navbar: Github logo link + hover fix

--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -49,8 +49,13 @@
             </div>
           </li>
           <li class="nav-item">
-            <a id="nav-github-logo" class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium">
-              <img src="images/github-logo-grey.png" height="50" width="50" alt="Github link"/> </a>
+            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium">
+              <img src="images/github-logo-grey.png" 
+                   onmouseover="this.src='images/github-logo.png';" 
+                   onmouseout="this.src='images/gituhub-logo-grey.png';" 
+                   height="50" 
+                   width="50" 
+                   alt="Github link"/> </a>
             </a>
           </li>
         </ul>
