Updated ui styling from client feedback, updated website to latest changes. Also added current unit tests

--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="index.html"> HOME </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="team.html">OUR TEAM</a>
+            <a class="nav-link" href="team.html"> OUR TEAM </a>
           </li>
 
           <li class="nav-item dropdown">
@@ -54,12 +54,13 @@
             </div>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="https://github.com/mlgarrett/antarcticapstone"
-              target="_blank"
-            >
-              GITHUB
+            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium">
+              <img src="images/github-logo-grey.png" 
+                   onmouseover="this.src='images/github-logo.png';" 
+                   onmouseout="this.src='images/github-logo-grey.png';" 
+                   height="30" 
+                   width="30" 
+                   alt="Github link"/> </a>
             </a>
           </li>
         </ul>
@@ -109,7 +110,7 @@
                 data-toggle="collapse"
                 href="#collapse1"
                 onclick="toggleDropdown(this)"
-                >Design Review 1<i class="fa fa-angle-down ml-2"></i
+                >Design Review 1<i class="fa fa-angle-up ml-2"></i
               ></a>
             </div>
             <div id="collapse1" class="panel-collapse collapse">
