--- a/TeamWebsite/requirements.html
+++ b/TeamWebsite/requirements.html
@@ -45,12 +45,13 @@
             </div>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="https://github.com/mlgarrett/antarcticapstone"
-              target="_blank"
-            >
-              GITHUB
+            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium">
+              <img src="images/github-logo-grey.png" 
+                   onmouseover="this.src='images/github-logo.png';" 
+                   onmouseout="this.src='images/github-logo-grey.png';" 
+                   height="30" 
+                   width="30" 
+                   alt="Github link"/> </a>
             </a>
           </li>
         </ul>
