Added new page to website for technology and update navbar

--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -26,31 +26,24 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"> HOME </a>
+            <a class="nav-link" href="index.html"> HOME
+              </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="team.html">OUR TEAM</a>
+            <a class="nav-link" href="requirements.html">PROJECT REQUIREMENTS</a>
           </li>
-
-          <li class="nav-item dropdown active">
+          <li class="nav-item">
+            <a class="nav-link" href="documents.html">DOCUMENTS</a>
+          </li>
+          <li class="nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle"
+              class="nav-link dropdown-toggle active"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false"
-              >MORE INFO</a
-            >
-            <div
-              class="dropdown-menu dropdown-menu-right"
-              aria-labelledby="dropdown09"
-            >
-              <a class="dropdown-item" href="requirements.html"
-                >PROJECT REQUIREMENTS</a
-              >
-              <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
-              <a class="dropdown-item" href="schedule.html"
-                >SCHEDULE<span class="sr-only">(current)</span></a
-              >
+              aria-expanded="false">MORE INFO</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
+              <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
+              <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
               <a class="dropdown-item" href="demos.html">DEMOS</a>
             </div>
           </li>
