--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -26,29 +26,25 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"> HOME </a>
+            <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="team.html"> OUR TEAM </a>
+            <a class="nav-link" href="requirements.html">PROJECT REQUIREMENTS</a>
           </li>
-
+          <li class="nav-item active">
+            <a class="nav-link" href="documents.html">DOCUMENTS</a>
+          </li>
           <li class="nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle active"
+              class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false"
-              >MORE INFO</a
-            >
+              aria-expanded="false">MORE INFO</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
-              <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
-              <a class="dropdown-item" href="documents.html"
-                >DOCUMENTS<span class="sr-only">(current)</span></a
-              >
+              <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
               <a class="dropdown-item" href="demos.html">DEMOS</a>
             </div>
