--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -26,13 +26,16 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"> HOME
-              <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html"> 
+              HOME <span class="sr-only">(current)</span>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="team.html">OUR TEAM</a>
+            <a class="nav-link" href="requirements.html">PROJECT REQUIREMENTS</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="documents.html">DOCUMENTS</a>
+          </li>
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
@@ -40,8 +43,7 @@
               aria-haspopup="true"
               aria-expanded="false">MORE INFO</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
-              <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
-              <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
+              <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
               <a class="dropdown-item" href="demos.html">DEMOS</a>
             </div>
@@ -89,6 +91,11 @@
           electromagnetic spectrum. This allows geologists to see different geological
           components that aren't visible on the normal satellite image.
         </p>
+      </div>
+      <div class="row justify-content-center" id="home-about">
+        <h3>
+          <a href="http://capstone.rabbitlabs.us:8080/" target="_blank">View the Project <i class="fas fa-external-link-alt" style="color: #007bff;"></i></a>
+        </h3>
       </div>
       <div class="row justify-content-center">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
