--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -42,10 +42,10 @@
               aria-expanded="false">MORE INFO</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
               <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
+              <a class="dropdown-item" href="technologies.html">TECHNOLOGIES</a>
               <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
               <a class="dropdown-item" href="demos.html">DEMOS</a>
-              <a class="dropdown-item" href="https://github.com/mlgarrett/antarcticapstone">GITHUB</a>
             </div>
           </li>
           <li class="nav-item">
